# slor

./: .gitignore  README.md  pyproject.toml  setup.cfg
scripts/: slor
slor/: analysis.py  control.py  db_ops.py  driver.py  prepare.py  process.py  s3primitives.py  sample.py  shared.py  slor.py  slor_a.py  slor_c.py  slor_control.py  slor_d.py  slor_thread.py  slor_worker.py  stages.py  stat_handler.py  worker.py  workload.py
slor/stage/: cleanup.py  complex.py  delete.py  head.py  mixed.py  overrun.py  prepare.py  read.py  workload.py  write.py
src/: control.py  process.py  shared.py  slor_a.py  slor_c.py  slor_d.py  stat_handler.py  workload.py
src/slor/: analysis.py  control.py  db_ops.py  driver.py  output.py  plots.py  process.py  s3primitives.py  sample.py  screen.py  setup.cfg  shared.py  slor_a.py  slor_c.py  slor_d.py  slor_db.py  stat_handler.py  workload.py
src/slor/stage/: cleanup.py  delete.py  head.py  mixed.py  mpu.py  overrun.py  prepare.py  read.py  workload.py  write.py
src/slor_thirstler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stage/: cleanup.py  delete.py  head.py  mixed.py  mpu.py  overrun.py  prepare.py  workload.py  write.py
tests/: adv_workload.yaml  basic_workload.yaml  test_imports.py  workload_sample.yaml
