[metadata]
name = slor-thirstler
version = 0.50
author = Jason Russler
author_email = jason.russler@gmail.com
description = SLoR (S3 LOad Ruler), a distributed benchmarking and load generation tool for S3 stroage
long_description = file: README.md
long_description_content_type = 
url = https://github.com/thirstler/slor
project_urls = 
	Bug Tracker = https://github.com/thirstler/slor/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
scripts = 
	scripts/slor
packages = find:
python_requires = >=3.6
install_requires = 
	boto3
	pyyaml
	pyjson
	numpy
	randomgen

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

